# laionfashion

./: .env.example  .gitignore  CLAUDE.md  README.md  completion_plan.md  dashboard_todo.md  progress.md  pyproject.toml
app/: explorer.html  streamlit_app.py
configs/: pipeline.yaml  pipeline_50k.yaml  pipeline_5k.yaml
docs/: agent_handoff.md  case_study.md  data_card.md  development.md  model_card.md  scale_up_commands.md
scripts/: 00_inventory.py  01_build_debug_subset.py  02_build_projection.py  03_build_demo_axes.py  04_make_review_contact_sheet.py  05_build_clip_axes.py  06_extract_garments.py  07_embed_garments.py  08_evaluate_retrieval.py  09_garment_review.py  10_pack_bundle.py  11_validate_portable_bundle.py  12_build_search_index.py  13_compare_embeddings.py  14_cluster_and_label.py  15_generate_annotation_tasks.py  16_evaluate_annotations.py  17_annotation_viewer.py  18_failure_report.py  19_export_dashboard_data.py  20_download_pexels.py  21_download_unsplash.py  22_redownload_laion_urls.py  23_merge_sources.py  24_harvest_laion_urls.py  run_full_pipeline.py
src/laionfashion/: __init__.py  annotation.py  axes.py  bundle.py  clusters.py  config.py  data_access.py  debug_export.py  evaluation.py  failures.py  (+10 more)
tests/: test_annotation.py  test_axes.py  test_bundle.py  test_clusters.py  test_data_access.py  test_debug_export.py  test_diagnostics.py  test_evaluation.py  test_failures.py  test_filtering.py  test_garments.py  test_image_scoring.py  test_models.py  test_portable.py  test_projection.py  test_retrieval.py  test_review.py  test_search.py
